platform_versioned_docs/version-4.3.0/api/_partials/resources/config/status/audit.mdx



<details className="config-field" data-expandable="false" open>
<summary>

## `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#enabled}

If audit is enabled and incoming api requests will be logged based on the supplied policy.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

## `disableAgentSyncBack` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#disableAgentSyncBack}

If true, the agent will not send back any audit logs to Loft itself.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

## `level` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#level}

Level is an optional log level for audit logs. Cannot be used together with policy

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

## `policy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy}

The audit policy to use and log requests. By default loft will not log anything

</summary>




<details className="config-field" data-expandable="true">
<summary>

### `rules` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules}

Rules specify the audit Level a request should be recorded at.
A request may match multiple rules, in which case the FIRST matching rule is used.
The default audit level is None, but can be overridden by a catch-all rule at the end of the list.
PolicyRules are strictly ordered.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `level` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-level}

The Level that requests matching this rule are recorded at.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `users` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-users}

The users (by authenticated user name) this rule applies to.
An empty list implies every user.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `userGroups` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-userGroups}

The user groups this rule applies to. A user is considered matching
if it is a member of any of the UserGroups.
An empty list implies every user group.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `verbs` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-verbs}

The verbs that match this rule.
An empty list implies every verb.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `resources` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-resources}

Resources that this rule matches. An empty list implies all kinds in all API groups.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `group` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-resources-group}

Group is the name of the API group that contains the resources.
The empty string represents the core API group.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `resources` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-resources-resources}

Resources is a list of resources this rule applies to.

For example:
'pods' matches pods.
'pods/log' matches the log subresource of pods.
'*' matches all resources and their subresources.
'pods/*' matches all subresources of pods.
'*/scale' matches all scale subresources.

If wildcard is present, the validation rule will ensure resources do not
overlap with each other.

An empty list implies all resources and subresources in this API groups apply.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `resourceNames` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-resources-resourceNames}

ResourceNames is a list of resource instance names that the policy matches.
Using this field requires Resources to be specified.
An empty list implies that every instance of the resource is matched.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `namespaces` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-namespaces}

Namespaces that this rule matches.
The empty string "" matches non-namespaced resources.
An empty list implies every namespace.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `nonResourceURLs` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-nonResourceURLs}

NonResourceURLs is a set of URL paths that should be audited.
*s are allowed, but only as the full, final step in the path.
Examples:
 "/metrics" - Log requests for apiserver metrics
 "/healthz*" - Log all health checks

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `omitStages` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-omitStages}

OmitStages is a list of stages for which no events are created. Note that this can also
be specified policy wide in which case the union of both are omitted.
An empty list means no restrictions will apply.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `requestTargets` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-requestTargets}

RequestTargets is a list of request targets for which events are created.
An empty list implies every request.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `clusters` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-rules-clusters}

Clusters that this rule matches. Only applies to cluster requests.
If this is set, no events for non cluster requests will be created.
An empty list means no restrictions will apply.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `omitStages` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#policy-omitStages}

OmitStages is a list of stages for which no events are created. Note that this can also
be specified per rule in which case the union of both are omitted.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

## `dataStoreEndpoint` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#dataStoreEndpoint}

DataStoreEndpoint is an endpoint to store events in.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

## `dataStoreTTL` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#dataStoreTTL}

DataStoreMaxAge is the maximum number of hours to retain old log events in the datastore

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

## `path` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#path}

The path where to save the audit log files. This is required if audit is enabled. Backup log files will
be retained in the same directory.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

## `maxAge` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#maxAge}

MaxAge is the maximum number of days to retain old log files based on the
timestamp encoded in their filename.  Note that a day is defined as 24
hours and may not exactly correspond to calendar days due to daylight
savings, leap seconds, etc. The default is not to remove old log files
based on age.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

## `maxBackups` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#maxBackups}

MaxBackups is the maximum number of old log files to retain.  The default
is to retain all old log files (though MaxAge may still cause them to get
deleted.)

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

## `maxSize` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#maxSize}

MaxSize is the maximum size in megabytes of the log file before it gets
rotated. It defaults to 100 megabytes.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

## `compress` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#compress}

Compress determines if the rotated log files should be compressed
using gzip. The default is not to perform compression.

</summary>



</details>
